new slides unicef

--- a/source/improving-childrens-lives.html
+++ b/source/improving-childrens-lives.html
@@ -14,56 +14,56 @@ subtitle:
   <div id="fullpage">
 
     <div class="section" id="section01">
-      <img src="/images/slides/improving-childrens-lives/slide-01.png" id="slide01" alt="slide01" />
+      <img src="/images/slides/improving-childrens-lives/slide01.jpg" id="slide01" alt="slide01" />
     </div>
 
     <div class="section" id="section02">
-      <img src="/images/slides/improving-childrens-lives/slide-02.png" id="slide02" alt="slide02" />
+      <img src="/images/slides/improving-childrens-lives/slide02.jpg" id="slide02" alt="slide02" />
     </div>
 
     <div class="section" id="section03">
-      <img src="/images/slides/improving-childrens-lives/slide-03.png" id="slide03" alt="slide03" />
+      <img src="/images/slides/improving-childrens-lives/slide03.jpg" id="slide03" alt="slide03" />
     </div>
 
     <!-- PAGES 4 5 6 -->
     <div class="section" id="section04">
       <div class="slide" data-anchor="4a"> 
-        <img src="/images/slides/improving-childrens-lives/slide-04.png" id="slide04" alt="slide04" />
+        <img src="/images/slides/improving-childrens-lives/slide04.jpg" id="slide04" alt="slide04" />
         <div class="row expanded align-center" id="slide-instructions">
           <p>Click on the arrows or use your keyboard to navigate left and right</p>
         </div>
       </div>
       <div class="slide" data-anchor="4b">
-        <img src="/images/slides/improving-childrens-lives/slide-05.png" id="slide05" alt="slide05" />
+        <img src="/images/slides/improving-childrens-lives/slide05.jpg" id="slide05" alt="slide05" />
       </div>
       <div class="slide" data-anchor="4c">
-        <img src="/images/slides/improving-childrens-lives/slide-06.png" id="slide06" alt="slide06" />
+        <img src="/images/slides/improving-childrens-lives/slide06.jpg" id="slide06" alt="slide06" />
       </div>
       <div class="slide" data-anchor="4d">
-        <img src="/images/slides/improving-childrens-lives/slide-07.png" id="slide07" alt="slide07" />
+        <img src="/images/slides/improving-childrens-lives/slide07.jpg" id="slide07" alt="slide07" />
       </div>
       <div class="slide" data-anchor="4e">
-        <img src="/images/slides/improving-childrens-lives/slide-08.png" id="slide08" alt="slide08" />
+        <img src="/images/slides/improving-childrens-lives/slide08.jpg" id="slide08" alt="slide08" />
       </div>
       <div class="slide" data-anchor="4f">
-        <img src="/images/slides/improving-childrens-lives/slide-09.png" id="slide09" alt="slide09" />
+        <img src="/images/slides/improving-childrens-lives/slide09.jpg" id="slide09" alt="slide09" />
       </div>
       <div class="slide" data-anchor="4g">
-        <img src="/images/slides/improving-childrens-lives/slide-10.png" id="slide10" alt="slide10" />
+        <img src="/images/slides/improving-childrens-lives/slide10.jpg" id="slide10" alt="slide10" />
       </div>
       <div class="slide" data-anchor="4h">
-        <img src="/images/slides/improving-childrens-lives/slide-11.png" id="slide11" alt="slide11" />
+        <img src="/images/slides/improving-childrens-lives/slide11.jpg" id="slide11" alt="slide11" />
       </div>
       <div class="slide" data-anchor="4i">
-        <img src="/images/slides/improving-childrens-lives/slide-12.png" id="slide12" alt="slide12" />
+        <img src="/images/slides/improving-childrens-lives/slide12.jpg" id="slide12" alt="slide12" />
       </div>
     </div>
 
     <div class="section" id="section05">
-      <img src="/images/slides/improving-childrens-lives/slide-13.png" id="slide13" alt="slide13" />
+      <img src="/images/slides/improving-childrens-lives/slide13.jpg" id="slide13" alt="slide13" />
     </div>
     <div class="section" id="section06">
-      <img src="/images/slides/improving-childrens-lives/slide-14.png" id="slide14" alt="slide14" />
+      <img src="/images/slides/improving-childrens-lives/slide14.jpg" id="slide14" alt="slide14" />
     </div>
 
   </div>
