--- a/source/team.html
+++ b/source/team.html
@@ -17,6 +17,7 @@ title: Team | Data Collaboratives
           <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')"></div>
         </div>
         <div class="column">
+          <a name="stefaan-verhulst"></a>
           <div class="team-page__bio">
             <h3>Stefaan Verhulst</h3>
             <h5>Lead</h5>
@@ -33,6 +34,7 @@ title: Team | Data Collaboratives
           <div class="team-page__image" style="background-image: url('/images/team/andrew-young.jpg')"></div>
         </div>
         <div class="column">
+          <a name="andrew-young"></a>
           <div class="team-page__bio">
             <h3>Andrew Young</h3>
             <h5>Co-Lead</h5>
@@ -169,6 +171,7 @@ title: Team | Data Collaboratives
           <div class="team-page__image" style="background-image: url('/images/team/iryna-susha.jpg')"></div>
         </div>
         <div class="column">
+          <a name="iryna-susha"></a>
           <div class="team-page__bio">
             <h3>Iryna Susha</h3>
             <h5>Researcher</h5>
@@ -240,11 +243,11 @@ title: Team | Data Collaboratives
           <li>Ciro Cattu, <em>ISI Foundation</em></li>
           <li>Michele Tizzoni, <em>ISI Foundation</em></li>
           <li>Daniela Paolotti, <em>ISI Foundation</em></li>
-          <li>Matt Stempeck and John Paul Farmer, <em>Microsoft</em></li> 
+          <li>Matt Stempeck and John Paul Farmer, <em>Microsoft</em></li>
           <li>Jos Berens, Ulrich Mans and Gideon Shimson, <em>University of Leiden, The Hague</em></li>
           <li>Sarah Telford, Mark Dalton and Lilian Barajas, <em>UNOCHA</em></li>
           <li>William Hoffman, <em>World Economic Forum</em></li>
-          <li>Neil Britto, <em>InterSector Project</em></li> 
+          <li>Neil Britto, <em>InterSector Project</em></li>
           <li>The members and partners of the <a href="http://www.responsible-data.org/"><em>International Responsible Data Group</em></a></li>
           <li>The members of the <a href="http://www.opening-governance.org/"><em>MacArthur Research Network of Opening Governance</em></a></li>
         </ul>
