add confirmation page

--- a/source/network.html
+++ b/source/network.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Data Responsibility Framework
+title: Data Collaboratives Research Network
 ---
 
 <div class="network-page">
