research network page tweaks

--- a/source/researchnetwork.html
+++ b/source/researchnetwork.html
@@ -18,7 +18,7 @@ title: Data Collaboratives Research Network
 
         <p>To address today's many complex societal challenges - from high levels of migration to climate change - we need to increase the accessibility and responsible use of a variety of data sources. Governments and institutions are increasingly adopting data-driven approaches, but many of the most valuable datasets for problem-solving are held by private sector actors.</p>
 
-        <p>To unlock and exchange corporate data for public good new types of public private partnerships are emerging: Data Collaboratives  While we have documented and analyzed numerous examples of data collaboratives (see <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>) many questions remain, including, for instance:</p>
+        <p>To unlock and exchange corporate data for public good new types of public private partnerships are emerging: Data Collaboratives. While we have documented and analyzed numerous examples of data collaboratives (see <a class="framework-page__message--link" href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>) many questions remain, including, for instance:</p>
         <ul>
           <li>What are the realized impacts of existing data collaboratives, and how could success be replicated in other contexts?</li>
           <li>What types of problems are especially well-suited for data collaborative efforts?</li>
@@ -29,7 +29,7 @@ title: Data Collaboratives Research Network
 
         <p>The Data Collaboratives Research Network aims to connect researchers from around the globe working to deepen our understanding of how Data Collaboratives work (or don’t work) and translate those insights into practical recommendations moving forward.</p>
 
-        <p>The founding members include <a href="{{ '/team.html#stefaan-verhulst' | relative_url }}">Stefaan Verhulst</a>; <a href="{{ '/team.html#iryna-susha' | relative_url }}">Iryna Susha</a> and <a href="{{ '/team.html#andrew-young' | relative_url }}">Andrew Young</a></p>
+        <p>The founding members include <a class="framework-page__message--link" href="{{ '/team.html#stefaan-verhulst' | relative_url }}">Stefaan Verhulst</a>; <a class="framework-page__message--link" href="{{ '/team.html#iryna-susha' | relative_url }}">Iryna Susha</a> and <a class="framework-page__message--link" href="{{ '/team.html#andrew-young' | relative_url }}">Andrew Young</a></p>
         <p>The Data Collaboratives Research Network aims to</p>
         <ul>
           <li>connect expertise on the topic of Data Collaboratives;</li>
@@ -40,16 +40,25 @@ title: Data Collaboratives Research Network
 
         <p>The network is open to all researchers interested in Data Collaboratives.</p>
         <ul>
-          <li>Members of the Network will have the opportunity to collaboratively develop a number of common resources for the field of research and practice – building upon existing research efforts available at <a href="http://datacollaboratives.org/">DataCollaboratives.org</a>.</li>
-          <li>Members can also use the Network as a means for sharing findings with potential collaborators and more publicly promoting their work through the <a href="http://datacollaboratives.org/">DataCollaboratives.org</a> website and other channels.</li>
+          <li>Members of the Network will have the opportunity to collaboratively develop a number of common resources for the field of research and practice – building upon existing research efforts available at <a class="framework-page__message--link" href="http://datacollaboratives.org/">DataCollaboratives.org</a>.</li>
+          <li>Members can also use the Network as a means for sharing findings with potential collaborators and more publicly promoting their work through the <a class="framework-page__message--link" href="http://datacollaboratives.org/">DataCollaboratives.org</a> website and other channels.</li>
         </ul>
 
         <p>To join the Network, fill out the form below with your name, email, affiliation and research focus area. Once a month we will circulate a Network newsletter with updates from members and the Data Collaboratives space as a whole.</p>
 
-        <p>Questions? Feel free to contact <a href="mailto:Stefaan@thegovlab.org">Stefaan@thegovlab.org</a>.</p>
+        <p>Questions? Feel free to contact <a class="framework-page__message--link" href="mailto:Stefaan@thegovlab.org">Stefaan@thegovlab.org</a>.</p>
 
-        <a name="join"></a>
-        <h4>Join the Data Collaboratives Research Network</h4>
+      </div>
+    </div>
+  </div>
+<a name="join"></a>
+  <div class="divider">
+    <h1>Join the Data Collaboratives Research Network</h1>
+  </div>
+
+  <div class="page-section framework-page__message">
+    <div class="row">
+      <div class="column">
 
         <span class="error-messages"></span>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(typeof submitted !== 'undefined') {window.location='confirmation.html';}"></iframe>
