--- a/source/team.html
+++ b/source/team.html
@@ -39,7 +39,7 @@ title: Team | Data Collaboratives
             <h3>Andrew Young</h3>
             <h5>Co-Lead</h5>
             <p>
-              Andrew Young is the Associate Director of Research at The GovLab, where he leads research efforts focusing on the impact of technology on public institutions. Among the grant-funded projects he has directed are a global assessment of the impact of open government data; comparative benchmarking of government innovation efforts against those of other countries; and crafting the experimental design for testing the adoption of technology innovations in federal agencies.
+              Andrew Young is the Knowledge Director at The GovLab, where he leads research efforts focusing on the impact of technology on public institutions. Among the grant-funded projects he has directed are a global assessment of the impact of open government data; comparative benchmarking of government innovation efforts against those of other countries; and crafting the experimental design for testing the adoption of technology innovations in federal agencies.
             </p>
           </div>
         </div>
