--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@ subtitle:
     <div class="large-6 column large-offset-6">
       <div class="bg-panel__content" style="padding-top: 100px; padding-bottom: 100px;">
         <p class="large-text">Solving today’s challenges — from addressing climate change to public health to job creation —will  require greater access to data that resides within the private sector —e.g., click histories, online purchases, sensor data, and call detail records.</p>
-        <p class="large-text">To fulfil the <a href="http://odimpact.org/" target="_blank">potential of data</a> to improve people’s lives, we need to accelerate the creation and use of “Data Collaboratives”.</p>
+        <p class="large-text">To fulfill the <a href="http://odimpact.org/" target="_blank">potential of data</a> to improve people’s lives, we need to accelerate the creation and use of “Data Collaboratives”.</p>
       </div>
     </div>
   </div>
@@ -143,7 +143,7 @@ subtitle:
     <div class="column large-6">
       <div class="checkerboard__content">
         <h6 class="checkerboard__header">Data Responsibility Framework</h6>
-        <p class="checkerboard__main">Data Collaboratives do also introduce some level of risk. Learn more about risks across the data lifecycle and strategies for mitigating them with our <strong>Data Responsibility Framework</strong>.</p>
+        <p class="checkerboard__main">Data Collaboratives introduce some level of risk. Learn more about risks across the data lifecycle and strategies for mitigating them with our <strong>Data Responsibility Framework</strong>.</p>
         <p class="checkerboard__footer"><a href="{{ '/framework.html' | relative_url }}" class="button button--outline-dark">More</a></p>
       </div>
     </div>
