add case studies and executive summary

--- a/source/social-media.html
+++ b/source/social-media.html
@@ -23,6 +23,7 @@ subtitle:
 
   <section class="page-section callout-message dcfb-callout-message">
     <a class="button dcfb-fold__button" href="">READ THE REPORT</a>
+    <a class="button dcfb-fold__button" href="">EXECUTIVE SUMMARY</a>
     <div class="row align-center expanded">
       <div class="large-7 large-offset-1 medium-12 small-12 column">
         <p class="left">The twenty-first century will be challenging on many fronts. From historically catastrophic natural disasters resulting from climate change to inequality to refugee and terrorism crises, it is clear that we need not only new solutions, but new insights and methods of arriving at solutions. Data, and the intelligence gained from it through advances in data science, is increasingly being seen as part of the answer. This report explores the premise that data—and in particular the vast stores of data and the unique analytical expertise held by social media companies—may indeed provide for a new type of intelligence that could help develop solutions to today’s challenges. </p>
@@ -52,6 +53,14 @@ subtitle:
           <p class="large-text">
             Data held by social media companies can help NGOs, humanitarian organizations and others better understand demographic trends, public sentiment, and the geographic distribution of various phenomena. In doing so, data contributes to improved situational awareness and response.
           </p>
+          <p class="bg-panel__content__list-header">
+            Case studies:
+          </p>
+          <ul class="bg-panel__content__list">
+            <li>Facebook Disaster Maps</li>
+            <li>Tracking Anti-Vaccination Sentiment in Eastern European Social Media Networks</li>
+            <li>Facebook Population Density Project</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -65,6 +74,14 @@ subtitle:
           <p class="large-text">
             Widely dispersed datasets can be combined and analyzed to create new knowledge, in the process ensuring that those responsible for solving problems have the most useful information at hand.
           </p>
+          <p class="bg-panel__content__list-header">
+            Case studies:
+          </p>
+          <ul class="bg-panel__content__list">
+            <li>Yelp Dataset Challenge</li>
+            <li>MIT Laboratory for Social Machines’ Electome Project</li>
+            <li>LinkedIn’s Economic Graph Research Program</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -78,6 +95,14 @@ subtitle:
           <p class="large-text">
             Data Collaboratives can increase access to previously inaccessible datasets, thereby enabling more accurate modelling of public service design and helping to guide service delivery in a targeted, evidence-based manner.
           </p>
+          <p class="bg-panel__content__list-header">
+            Case studies:
+          </p>
+          <ul class="bg-panel__content__list">
+            <li>Facebook Future of Business Survey</li>
+            <li>Easing Urban Congestion Using Waze Traffic Data</li>
+            <li>Facebook Insights for Impact Zika</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -91,6 +116,14 @@ subtitle:
           <p class="large-text">
             New predictive capabilities enabled by access to social media datasets can help institutions be more proactive, putting in place mechanisms based on sound evidence that mitigate problems or avert crises before they occur.
           </p>
+          <p class="bg-panel__content__list-header">
+            Case studies:
+          </p>
+          <ul class="bg-panel__content__list">
+            <li>Tracking the Flu Using Tweets</li>
+            <li>Predicting Floods with Social Media Metatags</li>
+            <li>Predicting Adverse Drug Events by Mining Health Social Media Streams and Forums</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -104,6 +137,14 @@ subtitle:
           <p class="large-text">
             Access to social media datasets can help institutions monitor and evaluate the real-world impacts of policies. This helps design better products or services, and enables a process of iteration and constant improvement.
           </p>
+          <p class="bg-panel__content__list-header">
+            Case studies:
+          </p>
+          <ul class="bg-panel__content__list">
+            <li>Sport England’s #ThisGirlCan</li>
+            <li>Using Twitter Data to Analyze Public Sentiment on Fuel Subsidy Policy Reform in El Salvador</li>
+            <li>Using Twitter to Measure Global Engagement on Climate Change</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -115,6 +156,7 @@ subtitle:
         <p>Existing research on data collaboratives is sparse, but a number of recent examples show how social media data can be leveraged for public good. These include Facebook’s sharing of population maps with humanitarian organizations following natural disasters; predicting adverse drug reactions through social media data analysis in Spain; and the city of Boston’s use of  crowdsourced data from Waze to improve transportation planning. These examples and 9 additional cases are discussed in the full report.
         </p>
         <a class="button dcfb-fold__button dcfb-fold__button--no-translate">READ THE REPORT</a>
+        <a class="button dcfb-fold__button dcfb-fold__button--no-translate">EXECUTIVE SUMMARY</a>
       </div>
     </div>
   </section>
