--- a/source/index.html
+++ b/source/index.html
@@ -163,12 +163,12 @@ subtitle:
         <div class="column small-12">
             <i class="material-icons sticky__close js-close-sticky">close</i>
             <div class="row">
-              <div class="columns large-3">
-                <img class="sticky__image" src="/images/unicef-cover.png" alt="">
+              <div class="columns large-3 align-center">
+                <img class="sticky__image" src="{{ '/images/dcfb-cover-flat.png' | relative_url }}" alt="">
               </div>
               <div class="columns">
-                <h3 class="sticky__title">Data Collaboratives to Improve Children’s Lives</h3>
-                <p>How do you solve complex problems affecting the world’s children using data? <a href="{{ '/improving-childrens-lives.html' | relative_url }}">Learn more</a></p>
+                <h3 class="sticky__title">THE POTENTIAL OF SOCIAL MEDIA INTELLIGENCE TO IMPROVE PEOPLE’S LIVES</h3>
+                <p>How can social media data can be leveraged for public good? <a href="{{ '/social-media.html' | relative_url }}">Learn more</a></p>
               </div>
             </div>
         </div>
