add opengraph tags

--- a/source/social-media.html
+++ b/source/social-media.html
@@ -2,6 +2,7 @@
 layout: default
 title: Social Media | Data Collaboratives
 subtitle:
+image: '/images/social-media-report-og.jpg'
 ---
 
 <main role="main"> <!-- main content starts here -->
