add report pdfs

--- a/source/social-media.html
+++ b/source/social-media.html
@@ -23,8 +23,8 @@ image: '/images/social-media-report-og.jpg'
 
 
   <section class="page-section callout-message dcfb-callout-message">
-    <a class="button dcfb-fold__button" href="">READ THE REPORT</a>
-    <a class="button dcfb-fold__button" href="">EXECUTIVE SUMMARY</a>
+    <a class="button dcfb-fold__button" href="{{ '/static/files/social-media-data.pdf' | relative_url }}" target="_blank">READ THE REPORT</a>
+    <a class="button dcfb-fold__button" href="{{ '/static/files/social-media-data-executive-summary.pdf' | relative_url }}" target="_blank">EXECUTIVE SUMMARY</a>
     <div class="row align-center expanded">
       <div class="large-7 large-offset-1 medium-12 small-12 column">
         <p class="left">The twenty-first century will be challenging on many fronts. From historically catastrophic natural disasters resulting from climate change to inequality to refugee and terrorism crises, it is clear that we need not only new solutions, but new insights and methods of arriving at solutions. Data, and the intelligence gained from it through advances in data science, is increasingly being seen as part of the answer. This report explores the premise that data—and in particular the vast stores of data and the unique analytical expertise held by social media companies—may indeed provide for a new type of intelligence that could help develop solutions to today’s challenges. </p>
@@ -156,8 +156,8 @@ image: '/images/social-media-report-og.jpg'
       <div class="large-10 small-12 column">
         <p>Existing research on data collaboratives is sparse, but a number of recent examples show how social media data can be leveraged for public good. These include Facebook’s sharing of population maps with humanitarian organizations following natural disasters; predicting adverse drug reactions through social media data analysis in Spain; and the city of Boston’s use of  crowdsourced data from Waze to improve transportation planning. These examples and 9 additional cases are discussed in the full report.
         </p>
-        <a class="button dcfb-fold__button dcfb-fold__button--no-translate">READ THE REPORT</a>
-        <a class="button dcfb-fold__button dcfb-fold__button--no-translate">EXECUTIVE SUMMARY</a>
+        <a class="button dcfb-fold__button dcfb-fold__button--no-translate" href="{{ '/static/files/social-media-data.pdf' | relative_url }}" target="_blank">READ THE REPORT</a>
+        <a class="button dcfb-fold__button dcfb-fold__button--no-translate" href="{{ '/static/files/social-media-data-executive-summary.pdf' | relative_url }}" target="_blank">EXECUTIVE SUMMARY</a>
       </div>
     </div>
   </section>
