--- a/source/index.html
+++ b/source/index.html
@@ -168,7 +168,7 @@ subtitle:
               </div>
               <div class="columns">
                 <h3 class="sticky__title">THE POTENTIAL OF SOCIAL MEDIA INTELLIGENCE TO IMPROVE PEOPLE’S LIVES</h3>
-                <p>How can social media data can be leveraged for public good? <a href="{{ '/social-media.html' | relative_url }}">Learn more</a></p>
+                <p>How can social media data be leveraged for public good? <a href="{{ '/social-media.html' | relative_url }}">Learn more</a></p>
               </div>
             </div>
         </div>
