fix escape characters on team page

--- a/source/team.html
+++ b/source/team.html
@@ -46,7 +46,7 @@ title: Team | Data Collaboratives
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
-          <div class="team-page__image" style="background-image: url(&#39;/images/team/amanda-desantis.jpg&#39;)"></div>
+          <div class="team-page__image" style="background-image: url('/images/team/amanda-desantis.jpg')"></div>
         </div>
         <div class="column">
           <div class="team-page__bio">
@@ -62,7 +62,7 @@ title: Team | Data Collaboratives
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
-          <div class="team-page__image" style="background-image: url(&#39;/images/team/andrew-zahuranec.jpg&#39;)"></div>
+          <div class="team-page__image" style="background-image: url('/images/team/andrew-zahuranec.jpg')"></div>
         </div>
         <div class="column">
           <div class="team-page__bio">
@@ -78,7 +78,7 @@ title: Team | Data Collaboratives
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
-          <div class="team-page__image" style="background-image: url(&#39;/images/team/michelle-winowatan.jpg&#39;)"></div>
+          <div class="team-page__image" style="background-image: url('/images/team/michelle-winowatan.jpg')"></div>
         </div>
         <div class="column">
           <div class="team-page__bio">
@@ -91,7 +91,7 @@ title: Team | Data Collaboratives
         </div>
       </div>
     </div>
-    
+
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
