--- a/source/existing-practices.html
+++ b/source/existing-practices.html
@@ -106,8 +106,8 @@ image: '/images/social-media-report-og.jpg'
           </ul>
         </div>
       </div>
-    </div> -->
-  </section>
+    </div>
+  </section> -->
 
   <!-- <section id="" class="page-section bg-panel" style="background-image: url(/images/bgs/dcfb-4.jpg);'">
     <div class="row expanded collapse">
