nexisting-practices-report

--- a/source/existing-practices.html
+++ b/source/existing-practices.html
@@ -1,21 +1,21 @@
 ---
 layout: default
-title: Social Media | Data Collaboratives
+title: Data Collaboratives | Existing Practices
 subtitle:
-image: '/images/social-media-report-og.jpg'
+image: 
 ---
 
 <main role="main"> <!-- main content starts here -->
 
-  <section class="top-section top-section--dcfb-bg">
+  <section class="top-section top-section--ep-bg">
     <div class="top-section__dcfb-band">
       <div class="row align-center">
         <div class="medium-10 column">
           <h1 class="top-section__logo" id="container"></h1>
           <img class="top-section__backup-logo" src="images/icosa-alpha.png" alt="backup logo"/>
-          <h5 class="top-section__header top-section__dcfb-header">THE POTENTIAL OF SOCIAL MEDIA INTELLIGENCE TO IMPROVE PEOPLE’S LIVES</h5>
-          <h5 class="top-section__sub-header top-section__dcfb-sub-header">Social Media Data for Good</h5>
-          <h6 class="top-section__author top-section__dcfb-author">By Stefaan Verhulst and Andrew Young</h6>
+          <h5 class="top-section__header top-section__dcfb-header">LEVERAGING PRIVATE DATA FOR PUBLIC GOOD</h5>
+          <h5 class="top-section__sub-header top-section__dcfb-sub-header">A Descriptive Analysis and Typology of Existing Practices</h5>
+          <h6 class="top-section__author top-section__dcfb-author">By Stefaan Verhulst, Andrew Young, Michelle Winowatan and Andrew Zahuranec </h6>
         </div>
       </div>
     </div>
@@ -23,17 +23,17 @@ image: '/images/social-media-report-og.jpg'
 
 
   <section class="page-section callout-message dcfb-callout-message">
-    <a class="button dcfb-fold__button" href="{{ '/social-media-report.html' | relative_url }}" target="_blank">READ THE REPORT</a>
-    <a class="button dcfb-fold__button" href="{{ '/social-media-report-summary.html' | relative_url }}" target="_blank">EXECUTIVE SUMMARY</a>
+    <a class="button dcfb-fold__button" href="{{ '/existing-practices-report.html' | relative_url }}" target="_blank">READ THE REPORT</a>
+    <a class="button dcfb-fold__button" href="{{ '/existing-practices-appendix.html' | relative_url }}" target="_blank">EXECUTIVE SUMMARY</a>
     <div class="row align-center expanded">
       <div class="large-7 large-offset-1 medium-12 small-12 column">
-        <p class="left">The twenty-first century will be challenging on many fronts. From historically catastrophic natural disasters resulting from climate change to inequality to refugee and terrorism crises, it is clear that we need not only new solutions, but new insights and methods of arriving at solutions. Data, and the intelligence gained from it through advances in data science, is increasingly being seen as part of the answer. This report explores the premise that data—and in particular the vast stores of data and the unique analytical expertise held by social media companies—may indeed provide for a new type of intelligence that could help develop solutions to today’s challenges. </p>
+        <p class="left">To address the challenges of our times, we need both new solutions and new ways to develop those solutions. The responsible use of data will be key toward that end. Since pioneering the concept of “data collaboratives” in 2015, The GovLab has studied and experimented with innovative ways to leverage private-sector data to tackle various societal challenges, such as urban mobility, public health, and climate change.</p>
         <p class="left">
-          In this report, developed with support from Facebook, we focus on an approach to extract public value from social media data that we believe holds the greatest potential: data collaboratives. Data collaboratives are an emerging form of public-private partnership in which actors from different sectors exchange information to create new public value. Such collaborative arrangements, for example between social media companies and humanitarian organizations or civil society actors, can be seen as possible templates for leveraging privately held data towards the attainment of public goals.
+          While we have seen an uptake in normative discussions on how data should be shared, little analysis exists of the actual practice. This paper seeks to address that gap and seeks to answer the following question: What are the variables and models that determine functional access to private sector data for public good? In Leveraging Private Data for Public Good: A Descriptive Analysis and Typology of Existing Practices, we describe the emerging universe of data collaboratives and develop a typology of six practice areas. Our goal is to provide insight into current applications to accelerate the creation of new data collaboratives. The report outlines dozens of examples, as well as a set of recommendations to enable more systematic, sustainable, and responsible data collaboration.
         </p>
       </div>
       <div class="large-4 medium-12 small-12 column">
-        <a class="dcfb-fold__dcfb-cover"><img src="{{ 'images/dcfb-cover.png' | relative_url }}"></a>
+        <a class="dcfb-fold__dcfb-cover"><img src="{{ 'images/ep-cover.png' | relative_url }}"></a>
       </div>
     </div>
   </section>
