--- a/source/existing-practices.html
+++ b/source/existing-practices.html
@@ -10,7 +10,7 @@ image:
   <section class="top-section top-section--ep-bg">
     <div class="top-section__dcfb-band">
       <div class="row align-center">
-        <div class="medium-10 column">
+        <div class="medium-10 column top-section__ep_width">
           <h1 class="top-section__logo" id="container"></h1>
           <img class="top-section__backup-logo" src="images/icosa-alpha.png" alt="backup logo"/>
           <h5 class="top-section__header top-section__dcfb-header">LEVERAGING PRIVATE DATA FOR PUBLIC GOOD</h5>
@@ -24,7 +24,7 @@ image:
 
   <section class="page-section callout-message dcfb-callout-message">
     <a class="button dcfb-fold__button" href="{{ '/existing-practices-report.html' | relative_url }}" target="_blank">READ THE REPORT</a>
-    <a class="button dcfb-fold__button" href="{{ '/existing-practices-appendix.html' | relative_url }}" target="_blank">EXECUTIVE SUMMARY</a>
+    <a class="button dcfb-fold__button" href="{{ '/existing-practices-appendix.html' | relative_url }}" target="_blank">DOWNLOAD THE APPENDIX</a>
     <div class="row align-center expanded">
       <div class="large-7 large-offset-1 medium-12 small-12 column">
         <p class="left">To address the challenges of our times, we need both new solutions and new ways to develop those solutions. The responsible use of data will be key toward that end. Since pioneering the concept of “data collaboratives” in 2015, The GovLab has studied and experimented with innovative ways to leverage private-sector data to tackle various societal challenges, such as urban mobility, public health, and climate change.</p>
