authors-line-edit

--- a/source/existing-practices.html
+++ b/source/existing-practices.html
@@ -10,7 +10,7 @@ image:
   <section class="top-section top-section--ep-bg">
     <div class="top-section__dcfb-band">
       <div class="row align-center">
-        <div class="medium-10 column top-section__ep_width">
+        <div class="top-section__ep_width column medium-10">
           <h1 class="top-section__logo" id="container"></h1>
           <img class="top-section__backup-logo" src="images/icosa-alpha.png" alt="backup logo"/>
           <h5 class="top-section__header top-section__dcfb-header">LEVERAGING PRIVATE DATA FOR PUBLIC GOOD</h5>
