--- a/source/existing-practices.html
+++ b/source/existing-practices.html
@@ -2,7 +2,7 @@
 layout: default
 title: Data Collaboratives | Existing Practices
 subtitle:
-image: 
+image: '/images/existing-practices-og.jpeg'
 ---
 
 <main role="main"> <!-- main content starts here -->
