--- a/source/index.html
+++ b/source/index.html
@@ -164,11 +164,11 @@ subtitle:
             <i class="material-icons sticky__close js-close-sticky">close</i>
             <div class="row">
               <div class="columns large-3 align-center">
-                <a href="https://datastewards.net/" target="_blank"><img class="sticky__image" src="{{ '/images/logo-ds-v-bg-neg.png' | relative_url }}" alt=""></a>
+                <a href="{{ '/existing-practices.html' | relative_url }}" target="_blank"><img class="sticky__image" src="{{ '/images/dc-ep.png' | relative_url }}" alt=""></a>
               </div>
               <div class="columns">
-                <h3 class="sticky__title" style="font-size: 1.25rem;">Data Stewards in the private sector can act as change agents for determining how to share data and insights for the public good.</h3>
-                <p>How can corporations develop and deploy Data Stewards? <a href="https://datastewards.net/" target="_blank">Learn more</a></p>
+                <h3 class="sticky__title" style="font-size: 1.25rem;">Leveraging Private Data for Public Good: A Descriptive Analysis and Typology of Existing Practices</h3>
+                <p>Read the new report<a href="{{ '/existing-practices.html' | relative_url }}" target="_blank"> here.</a></p>
               </div>
             </div>
         </div>
