--- a/source/index.html
+++ b/source/index.html
@@ -164,11 +164,11 @@ subtitle:
             <i class="material-icons sticky__close js-close-sticky">close</i>
             <div class="row">
               <div class="columns large-3 align-center">
-                <a href="{{ '/existing-practices.html' | relative_url }}" target="_blank"><img class="sticky__image" src="{{ '/images/dc-ep.png' | relative_url }}" alt=""></a>
+                <a href="http://data4covid19.org/" target="_blank"><img class="sticky__image" src="{{ '/images/data4covid_banner.png' | relative_url }}" alt=""></a>
               </div>
               <div class="columns">
-                <h3 class="sticky__title" style="font-size: 1.25rem;">Leveraging Private Data for Public Good: A Descriptive Analysis and Typology of Existing Practices</h3>
-                <p>Read the new report<a href="{{ '/existing-practices.html' | relative_url }}" target="_blank"> here.</a></p>
+                <h3 class="sticky__title" style="font-size: 1.25rem;">Visit and contribute to our Living Repository of data collaboratives seeking to address the spread of COVID-19 and its secondary effects</h3>
+                <p>Explore the full repository<a href="http://data4covid19.org/" target="_blank"> here.</a></p>
               </div>
             </div>
         </div>
